# bab_datasets

./: .gitignore  README.md  demo_bab_datasets.ipynb  demo_video_sync.ipynb  demo_video_sync.py  manual_led_frame_annotator.ipynb  pyproject.toml  setup.py
bab_datasets/: __init__.py  core.py  video.py
