[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bab_datasets"
version = "0.1.0"
description = "Lightweight dataset loaders for nonlinear system ID experiments"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy", "scipy", "matplotlib"]

[tool.setuptools.packages.find]
where = ["."]
